--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "mobx": "^3.0.0",
     "mobx-react": "^4.1.0",
     "mobx-react-devtools": "^4.2.11",
-    "react": "^15.1.0",
+    "qreact": "^1.1.2",
+    "react": "^16.0.0",
     "react-dom": "^15.1.0"
   }
 }
